-Remove all deprecated functions. While those functions are normally only removed after a major update (which this is not), they have been listed as deprecated for years now.

choroplethr 3.6.3
----------------------------------------------------------------
Remove dependency on scales package. The recent update of the scales package 
from 0.5 to 1.0.0 broke choroplethr.

Minor changes in order to have the package work work with the pkgdown package for documentation.

choroplethr 3.6.1
----------------------------------------------------------------
-Setting num_colors=0 will use a divergent scale. Useful when looking at percent change maps, or 
any maps that have both negative and positive values. Negative values appear red, 0 appears white
and positive values appear blue.

choroplethr 3.6.0
----------------------------------------------------------------
-New function tract_choropleth makes choropleths of Census Tracts.
-New function get_tract_demographics gets tract demographics by ACS survey year and span.
-New function calculate_percent_change
-New function double_map

choroplethr 3.5.3
----------------------------------------------------------------
-Fix warnings that were introduced by latest version of ggplot2
-Move documentation to my own site

choroplethr 3.5.2
----------------------------------------------------------------
-Move "acs" package from Import to Depends. While I don't think that this should be
necessary, it seems to be the only way to fix a bug I describe here: https://stat.ethz.ch/pipermail/r-package-devel/2016q1/000760.html

choroplethr 3.5.1
----------------------------------------------------------------
-Bug fix: As of ggplot 2.1.0, R6 class variables cannot be assigned to ggplot2 objects
in the class declaration. Doing so will break binary builds. So now assign them
in the constructor instead

choroplethr 3.5.0
----------------------------------------------------------------