@@ -34,7 +34,7 @@ Suggests:
     choroplethrMaps,
     choroplethrAdmin1 (>= 1.1.0)
 Depends:
-    R (>= 3.0.0),
+    R (>= 3.5.0),
     acs
 Collate: 
     'acs.R'
