@@ -28,6 +28,17 @@ NULL
 #' @usage data(df_pop_county)
 NULL
 
+#' A data.frame containing population estimates for all Census Tracts in New York 
+#' State in 2012.   
+#'
+#' @name df_pop_ny_tract
+#' @docType data
+#' @references Taken from the US American Community Survey (ACS) 5 year estimates.
+#' 
+#' @keywords data
+#' @usage data(df_pop_ny_tract)
+NULL
+
 #' A data.frame containing election results from the 2012 US Presidential election.  
 #'
 #' @name df_president
@@ -147,6 +158,16 @@ NULL
 #' df_county_demographics$value = df_county_demographics$percent_hispanic
 #' county_choropleth(df_county_demographics)
 #' }
+NULL
+
+#' A data.frame containing demographic statistics for each Census Tract in New York State.
+#' 
+#' @name df_ny_tract_demographics
+#' @docType data
+#' @references Data comes from the 2013 5-year American Community Survey (ACS). Data generated by
+#' ?get_tract_demographics. 
+#' @keywords data
+#' @usage data(df_ny_tract_demographics)
 NULL
 
 #' A vector of the names of US Continental US States.
